# NEPAv2

./: Dockerfile  compose.yaml  pyproject.toml  ruff.toml
app/: __init__.py  callbacks.py  database.py  extensions.py  healthcheck.py  sentry.py  utils.py
app/conf/: __init__.py  settings.py
app/database/: __init__.py  models.py  repositories.py
app/engine/: __init__.py  cli.py  feature.py  registry.py
app/engine/templates/: __init__.py.j2  models.py.j2  routes.py.j2
app/features/: __init__.py  config.py  registry.py
app/features/auth/: __init__.py  mail.py  models.py  perms.py
app/features/errors/: __init__.py  handlers.py
app/features/healthcheck/: __init__.py  checks.py  environment.py
app/templates/emails/: confirm_email.html  confirm_email.txt  otp_code.html  otp_code.txt  reset_password.html  reset_password.txt
app/utils/: models.py  modules.py
migrations/: env.py
migrations/versions/: dfcca84150ab_.py  f735d750d83f_.py
settings/: development.py  production.py
