[project]
name = "nepav2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "environs>=15.0.1",
    "flask>=3.1.3",
    "py-healthcheck>=1.10.1",
    "python-dotenv>=1.2.2",
    "waitress>=3.0.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.34",
]
