[project]
name = "nepav2"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "environs>=15.0.1",
    "flask>=3.1.3",
    "flask-cors>=6.0.2",
    "flask-mail>=0.10.0",
    "flask-migrate>=4.1.0",
    "flask-seasurf>=2.0.0",
    "flask-sqlalchemy>=3.1.1",
    "flask-talisman>=1.1.0",
    "psycopg[binary,pool]>=3.3.4",
    "py-healthcheck>=1.10.1",
    "python-dotenv>=1.2.2",
    "sentry-sdk[flask]>=2.59.0",
    "waitress>=3.0.2",
    "watchdog>=6.0.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.12",
    "ty>=0.0.34",
]
